Fixed alignment of endorsements box

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,11 +14,6 @@
  *= require_self
  */
 
-.ex4 .parent {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-}
-
 .header-container {
     width: 1000px;
     height: 100px;
@@ -74,12 +69,6 @@ nav a {
   margin-bottom: 0px;
   clear: both;
 }
-
-/* jess */
-
-
-
-/* jess */
 
 .top2 {margin:0px; text-align:center;}
 .top2a {display:inline-block;}
